update function has been done and all database connection are using knex
all database connection are using knex, update functionality has been done, and the way of insert, update, and deleting the data in the database has been made to be more secure, such as having a specific where condition only for the ID.
