# api/models/course.js
@@ -1,41 +1,28 @@
 // Initialize knex with the config file.
 const knexOptions = require('../db/knexfile');
-const conn = require('../db/cloudConnect');
+// const conn = require('../db/cloudConnect');
+''
 const knex = require("knex")(knexOptions);
 const fs = require('fs');
 
 // Change this to db connection for cloud
-const courses = require('../course-information.json');
+// const courses = require('../course-information.json');
 
-function queryData(sql) {
-    return new Promise((resolve, reject) => {
-        conn.query(sql, (err, results, fields) => {
-            if (err) {
-                reject(err);
-            }
-            else {
-                resolve(results);
-            }
-          });
-        });
-}
+// Expand this class to include all the functions that you need.
+class Course {
 
-function mysqlQuery(sql, value) {
-    return new Promise((resolve, reject) => {
-        conn.query(sql, value, (err, results, fields) => {
-            if (err) {
-                reject(err);
-            }
-            else {
-                resolve(results);
-            }
-          });
-        });
-}
+    static getCourse(table, where_data_type, value) {
+        try {
+            return knex(table).select('*').where(where_data_type, '=', value);
+        } catch (err) {
+            console.log(err);
+            throw err;
+        }
+    }
 
-function readData() {
+    static async getAllCourses() {
 
-    return new Promise(async (resolve, reject) => {
+        //return all data from cloud
         try {
             let allData = {
                 course : [],
@@ -46,209 +33,12 @@ function readData() {
                 quiz_question: []
             }
 
-            allData.course = await queryData('SELECT * FROM course');
-            allData.material = await queryData('SELECT * FROM material');
-            allData.module = await queryData('SELECT * FROM module');
-            allData.quiz = await queryData('SELECT * FROM quiz');
-            allData.quiz_question = await queryData('SELECT * FROM quiz_question');
-
-            resolve(allData);
-        } catch (err) {
-            reject(err);
-        }
-    })
-        
-    // conn.end(
-    //     function (err) { 
-    //         if (err) throw err;
-    //         else  console.log('Closing connection.') 
-    // });
-};
-
-function insertQueryStatement(queryData, value, table) {
-
-    console.log("query data: ");
-    console.log(queryData);
-
-    if (queryData.length == 1 && value.length == 1) {
-
-        return new Promise(async (resolve, reject) => {
-            try {
-    
-                const mess = await mysqlQuery(`INSERT INTO ${table} (${queryData[0]}) VALUES (?);`, value);
-                // const mess1 = {result: mess}
-                // console.log("mess1:\n");
-                // console.log("FUIYOOOO:\n");
-    
-                // console.log(mess1);
-                resolve(mess);
-            } catch (err) {
-                reject(err);
-            }
-        })
-    } else if (queryData.length === 2 && value.length === 2) {
-        return new Promise(async (resolve, reject) => {
-            try {
-    
-                const mess = await mysqlQuery(`INSERT INTO ${table} (${queryData[0]}, ${queryData[1]}) VALUES (?, ?);`, value);
-                console.log("mess:\n");
-    
-                console.log(mess);
-                resolve(mess);
-            } catch (err) {
-                reject(err);
-            }
-        })
-    } else if (queryData.length === 3 && value.length === 3) {
-        return new Promise(async (resolve, reject) => {
-            try {
-    
-                const mess = await mysqlQuery(`INSERT INTO ${table} (${queryData[0]}, ${queryData[1]}, ${queryData[2]}) VALUES (?, ?, ?);`, value);
-                console.log("mess:\n");
-    
-                console.log(mess);
-                resolve(mess);
-            } catch (err) {
-                reject(err);
-            }
-        })
-    } else if (queryData.length === 4 && value.length === 4) {
-        return new Promise(async (resolve, reject) => {
-            try {
-    
-                const mess = await mysqlQuery(`INSERT INTO ${table} (${queryData[0]}, ${queryData[1]}, ${queryData[2]}, ${queryData[3]}) VALUES (?, ?, ?, ?);`, value);
-                console.log("mess:\n");
-    
-                console.log(mess);
-                resolve(mess);
-            } catch (err) {
-                reject(err);
-            }
-        })
-    } else if (queryData.length === 5 && value.length === 5) {
-        return new Promise(async (resolve, reject) => {
-            try {
-    
-                const mess = await mysqlQuery(`INSERT INTO ${table} (${queryData[0]}, ${queryData[1]}, ${queryData[2]}, ${queryData[3]}, ${queryData[4]}) VALUES (?, ?, ?, ?, ?);`, value);
-                console.log("mess:\n");
-    
-                console.log(mess);
-                resolve(mess);
-            } catch (err) {
-                reject(err);
-            }
-        })
-    } else if (queryData.length === 6 && value.length === 6) {
-        console.log("query 7 data? check");
-
-        return new Promise(async (resolve, reject) => {
-            try {
-                console.log("query 7 data? check2");
-    
-                const mess = await mysqlQuery(`INSERT INTO ${table} (${queryData[0]}, ${queryData[1]}, ${queryData[2]}, ${queryData[3]}, ${queryData[4]}, ${queryData[5]}) VALUES (?, ?, ?, ?, ?, ?);`, value);
-                console.log("mess:\n");
-    
-                console.log(mess);
-                resolve(mess);
-            } catch (err) {
-                reject(err);
-            }
-        })
-    } else if (queryData.length === 7 && value.length === 7) {
-        return new Promise(async (resolve, reject) => {
-            try {
-    
-                const mess = await mysqlQuery(`INSERT INTO ${table} (${queryData[0]}, ${queryData[1]}, ${queryData[2]}, ${queryData[3]}, ${queryData[4]}, ${queryData[5]}, ${queryData[6]}) VALUES (?, ?, ?, ?, ?, ?, ?);`, value);
-                console.log("mess:\n");
-    
-                console.log(mess);
-                resolve(mess);
-            } catch (err) {
-                reject(err);
-            }
-        })
-    } else if (queryData.length === 8 && value.length === 8) {
-        return new Promise(async (resolve, reject) => {
-            try {
-    
-                const mess = await mysqlQuery(`INSERT INTO ${table} (${queryData[0]}, ${queryData[1]}, ${queryData[2]}, ${queryData[3]}, ${queryData[4]}, ${queryData[5]}, ${queryData[6]}, ${queryData[7]}) VALUES (?, ?, ?, ?, ?, ?, ?, ?);`, value);
-                console.log("mess:\n");
-    
-                console.log(mess);
-                resolve(mess);
-            } catch (err) {
-                reject(err);
-            }
-        })
-    }
-}
-
-// function deleteQueryStatement(dataType, value, condition, table) {
-//     return new Promise(async (resolve, reject) => {
-//         try {
-
-//             const mess = await insertQueryData(`DELETE FROM ${table} WHERE ${dataType} ${condition} ?`, value);
-//             // const mess1 = {result: mess}
-//             // console.log("mess1:\n");
-//             // console.log("FUIYOOOO:\n");
-
-//             // console.log(mess1);
-//             resolve(mess);
-//         } catch (err) {
-//             reject(err);
-//         }
-//     })
-// }
-
-// function updateQueryStatement(set_data_type, set_condition, where_data_type, where_condition, table, value) {
-//     return new Promise(async (resolve, reject) => {
-//         try {
-
-//             const mess = await insertQueryData(`UPDATE ${table} SET ${set_data_type} ${set_condition} ? WHERE ${where_data_type} ${where_condition}`, value);
-//             // const mess1 = {result: mess}
-//             // console.log("mess1:\n");
-//             // console.log("FUIYOOOO:\n");
-
-//             // console.log(mess1);
-//             resolve(mess);
-//         } catch (err) {
-//             reject(err);
-//         }
-//     })
-// }
-
-var config =
-{
-    host: 'jcmg-api.mysql.database.azure.com',
-    user: 'jcmg',
-    password: 'T%%v6AYO890UYyqWgM2#',
-    database: 'mydb',
-    port: 3306,
-    ssl: {ca: fs.readFileSync("./DigiCertGlobalRootCA.crt.pem")}
-};
-
-const knexInstance = knex(config);
-
-// Expand this class to include all the functions that you need.
-class Course {
-
-    constructor() {
-        // Initialize the class with the database connection
-        this.db = knexInstance;
-    }
-
-    static getCourse(courseID) {
-        return this.db('modules').select("*").where('course_id', '=', courseID);
-    }
-
-    static async getAllCourses() {
-        // return knex('modules').select("*");
-        //return courses.available_courses;
-
-        //return all data from cloud
-        try {
-
-            const allData = await readData();
+            allData.course = await knex('course').select('*');
+            allData.lecture = await knex('lecture').select('*');
+            allData.material = await knex('material').select('*');
+            allData.module = await knex('module').select('*');
+            allData.quiz = await knex('quiz').select('*');
+            allData.quiz_question = await knex('quiz_question').select('*');
 
             return allData;
         } catch (err) {
@@ -256,64 +46,64 @@ class Course {
         }
     }
 
-    static createData(courseData, courseValue, table) {
-        //return this.db('modules').insert(courseData);
-
-        return new Promise(async (resolve, reject) => {
-            try {
-
-                console.log("in?");
-    
-                const mess = await insertQueryStatement(courseData, courseValue, table);
-                console.log("mess:\n");
-    
-                console.log(mess);
-                resolve(mess);
-            } catch (err) {
-                reject(err);
-            }
-        })
+    static async insertData(newCourseData, table) {
+        return await knex(table).insert(newCourseData);
     }
 
-    static updateCourse(set_data_type, set_condition, where_data_type, where_condition, table, value) {
-        //return this.db('modules').where('course_id', '=', courseID).update(courseData);
-        return new Promise(async (resolve, reject) => {
-            try {
-                const result = await mysqlQuery(`UPDATE ${table} SET ${set_data_type} ${set_condition} ? WHERE ${where_data_type} ${where_condition} ?`, value);
-                
-                if (result.affectedRows > 0) {
-                    result['info'] = 'found';
-                    resolve(result);
-                } else {
-                    result['info'] = 'not found';
-                    resolve(result);
-                }
-            } catch (err) {
-                reject(err);
-            }
-        })
+    static updateCourse(set_data_type, value) {
+        return knex('course').update({ [set_data_type]: value[0] }).where("COURSE_ID", "=", value[1]);
     }
 
-    static deleteCourse(dataType, value, condition, table) {
-        //return this.db('modules').where('course_id', '=', courseID).del();
-        console.log("test?")
+    static updateLecture(set_data_type, value) {
+        return knex('lecture').update({ [set_data_type]: value[0] }).where("LECTURE_ID", "=", value[1]);
+    }
 
-        return new Promise(async (resolve, reject) => {
-            try {
-                const result = await mysqlQuery(`DELETE FROM ${table} WHERE ${dataType} ${condition} ?`, value);
+    static updateLectureContent(set_data_type, value) {
+        return knex('lecture_content').update({ [set_data_type]: value[0] }).where("LECTURE_CONTENT_ID", "=", value[1]);
+    }
 
-                if (result.affectedRows > 0) {
-                    result['info'] = 'found';
-                    resolve(result);
-                } else {
-                    result['info'] = 'not found';
-                    resolve(result);
-                }
-                
-            } catch (err) {
-                reject(err);
-            }
-        })
+    static updateMaterial(set_data_type, value) {
+        return knex('material').update({ [set_data_type]: value[0] }).where("MATERIAL_ID", "=", value[1]);
+    }
+
+    static updateModule(set_data_type, value) {
+        return knex('module').update({ [set_data_type]: value[0] }).where("MODULE_ID", "=", value[1]);
+    }
+
+    static updateQuiz(set_data_type, value) {
+        return knex('quiz').update({ [set_data_type]: value[0] }).where("QUIZ_ID", "=", value[1]);
+    }
+
+    static updateQuizQuestion(set_data_type, value) {
+        return knex('quiz_question').update({ [set_data_type]: value[0] }).where("QUESTION_ID", "=", value[1]);
+    }
+
+    static deleteCourse(value) {
+        return knex('course').where("COURSE_ID", "=", value).del();
+    }
+
+    static deleteLecture(value) {
+        return knex('lecture').where("LECTURE_ID", "=", value).del();
+    }
+
+    static deleteLectureContent(value) {
+        return knex('lecture_content').where("LECTURE_CONTENT_ID", "=", value).del();
+    }
+
+    static deleteMaterial(value) {
+        return knex('material').where("MATERIAL_ID", "=", value).del();
+    }
+
+    static deleteModule(value) {
+        return knex('module').where("MODULE_ID", "=", value).del();
+    }
+
+    static deleteQuiz(value) {
+        return knex('quiz').where("QUIZ_ID", "=", value).del();
+    }
+
+    static deleteQuizQuestion(value) {
+        return knex('quiz_question').where("QUESTION_ID", "=", value).del();
     }
 }
 
